feat: integrate TypeORM with MySQL and create products module
- Added TypeORM and MySQL dependencies to package.json.
- Configured TypeORM in app.module.ts to connect to MySQL database.
- Created SQL schema for products table in 01_schema.sql.
- Added seed data for products in 02_seed.sql.
- Implemented Product entity with TypeORM decorators.
- Developed ProductsController with endpoints for retrieving products.
- Created ProductsService for business logic related to products.
- Added unit tests for ProductsController and ProductsService.
- Established ProductsModule to encapsulate products-related components.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,40 +1,27 @@
-# Node.js
+# Node/TypeScript
 node_modules/
+dist/
+build/
+.tmp/
+.temp/
+.cache/
+coverage/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-package-lock.json
-yarn.lock
-.pnpm-debug.log
 
-# Build
-dist/
-build/
-.cache/
-.tmp/
-
-# Environment
+# Envs
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
 
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Logs
-logs
-*.log
-lerna-debug.log
-
-# OS
+# Editors/OS
 .DS_Store
 Thumbs.db
+.vscode/
+.idea/
 
 # Docker
-docker-compose.override.yml
+docker-data/
