--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,10 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26"
   },
+  "optionalDependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
