--- a/backend/package.json
+++ b/backend/package.json
@@ -56,7 +56,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "sqlite3": "^5.1.6"
   },
   "jest": {
     "moduleFileExtensions": [
