--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,15 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
+  ,
+  "migrate:up": "node ./scripts/run-migration.js ./mysql/migrations/20250823_add_deleted_at_and_product_audit.up.sql",
+  "migrate:down": "node ./scripts/run-migration.js ./mysql/migrations/20250823_add_deleted_at_and_product_audit.down.sql"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/typeorm": "^11.0.0",
+  "@nestjs/typeorm": "^11.0.0",
     "mysql2": "^3.14.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -56,7 +59,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
+  "typescript-eslint": "^8.20.0",
+  "dotenv": "^16.3.1",
     "sqlite3": "^5.1.6"
   },
   "jest": {
